--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  terraform_check:
+  tflint:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,6 +22,12 @@ jobs:
 
       - name: Run TFLint
         run: tflint -f compact
+
+  terraform_check:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
 
       - uses: hashicorp/setup-terraform@v2
       - name: Terraform fmt
