--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   tflint:
+    name: TFLint
     runs-on: ubuntu-latest
 
     steps:
@@ -23,13 +24,30 @@ jobs:
       - name: Run TFLint
         run: tflint -f compact
 
-  terraform_check:
+  tfsec:
+    name: tfsec
     runs-on: ubuntu-latest
 
     permissions:
       contents: read
       pull-requests: write
-      issues: write
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: tfsec
+        uses: aquasecurity/tfsec-pr-commenter-action@v1.3.1
+        with:
+          tfsec_args: --soft-fail
+          github_token: ${{ github.token }}
+
+  terraform_check:
+    name: Terraform plan
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      pull-requests: write
 
     steps:
       - uses: actions/checkout@v3
