fix(github): missing workflow step

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -44,7 +44,7 @@ jobs:
           github_token: ${{ github.token }}
 
   terraform_check:
-    name: Terraform plan
+    name: Terraform Plan
     runs-on: ubuntu-latest
 
     permissions:
