--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   terraform_destroy:
-    name: Terraform destroy
+    name: Terraform Destroy
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     environment: AWS
@@ -16,6 +16,9 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+
+      - name: Terraform Init
+        run: terraform init
 
       - name: Terraform Plan
         run: terraform plan -destroy -input=false
