--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -2,45 +2,46 @@ name: Terraform Apply
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+    paths:
+      - "**.tf"
 
 jobs:
   apply:
     name: Apply
     runs-on: ubuntu-latest
-    environment: AWS
+    environment:
+      name: ${{ vars.TF_WORKSPACE }}
+      url: ${{ steps.apply-run.outputs.run_link }}
 
-    permissions:
-      contents: read
-      pull-requests: write
+    env:
+      TF_CLOUD_ORGANIZATION: ${{ vars.TF_CLOUD_ORGANIZATION }}
+      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+      TF_WORKSPACE: ${{ vars.TF_WORKSPACE }}
+      CONFIG_DIRECTORY: ${{ vars.CONFIG_DIRECTORY }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+      - name: Upload Configuration
+        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.4
+        id: apply-upload
+        with:
+          workspace: ${{ env.TF_WORKSPACE }}
+          directory: ${{ env.CONFIG_DIRECTORY }}
 
-      - name: Terraform Init
-        id: init
-        run: terraform init
+      - name: Create Apply Run
+        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.4
+        id: apply-run
+        with:
+          workspace: ${{ env.TF_WORKSPACE }}
+          configuration_version: ${{ steps.apply-upload.outputs.configuration_version_id }}
 
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate
-
-      - uses: shmokmt/actions-setup-tfcmt@v2
-
-      - name: Terraform Plan
-        run: tfcmt plan -patch -- terraform plan -input=false
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-          TF_VAR_AWS_ACCESS_KEY: ${{ secrets.TF_AWS_READONLY_ACCESSKEY }}
-          TF_VAR_AWS_SECRET_KEY: ${{ secrets.TF_AWS_READONLY_SECRETKEY }}
-
-      - name: Terraform Apply
-        run: tfcmt apply -- terraform apply -input=false -auto-approve
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-          TF_VAR_AWS_ACCESS_KEY: ${{ secrets.TF_VAR_AWS_ACCESS_KEY }}
-          TF_VAR_AWS_SECRET_KEY: ${{ secrets.TF_VAR_AWS_SECRET_KEY }}
+      - name: Apply
+        uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.0.4
+        if: fromJSON(steps.apply-run.outputs.payload).data.attributes.actions.IsConfirmable
+        with:
+          run: ${{ steps.apply-run.outputs.run_id }}
+          comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
