--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,128 +9,22 @@ on:
 jobs:
   tflint:
     name: TFLint
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup TFLint
-        uses: terraform-linters/setup-tflint@v3
-
-      - name: Init TFLint
-        run: tflint --init
-        env:
-          # https://github.com/terraform-linters/tflint/blob/master/docs/user-guide/plugins.md#avoiding-rate-limiting
-          GITHUB_TOKEN: ${{ github.token }}
-
-      - name: Run TFLint
-        run: tflint -f compact
+    uses: soat-tech-challenge/github-workflows/.github/workflows/tflint.yml@main
 
   tfsec:
-    name: tfsec
-    runs-on: ubuntu-latest
+    uses: soat-tech-challenge/github-workflows/.github/workflows/tfsec.yml@main
 
     permissions:
       contents: read
       pull-requests: write
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: tfsec
-        uses: aquasecurity/tfsec-pr-commenter-action@v1.3.1
-        with:
-          tfsec_args: --soft-fail
-          github_token: ${{ github.token }}
-
-  terraform-cloud-speculative-run:
-    name: Terraform Cloud Speculative Run
-    runs-on: ubuntu-latest
+  terraform-plan:
+    name: Terraform Plan
+    uses: soat-tech-challenge/github-workflows/.github/workflows/terraform-plan.yml@main
+    secrets: inherit
+    with:
+      cloud_workspace: database-staging
 
     permissions:
       contents: read
       pull-requests: write
-
-    env:
-      TF_CLOUD_ORGANIZATION: ${{ vars.TF_CLOUD_ORGANIZATION }}
-      TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
-      TF_WORKSPACE: ${{ vars.TF_WORKSPACE }}
-      CONFIG_DIRECTORY: ${{ vars.CONFIG_DIRECTORY }}
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Upload Configuration
-        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.4
-        id: upload
-        with:
-          workspace: ${{ env.TF_WORKSPACE }}
-          directory: ${{ env.CONFIG_DIRECTORY }}
-          speculative: true
-
-      - name: Create Plan Run
-        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.4
-        id: run
-        ## run may fail, if so continue to output PR comment
-        ## step.terraform-cloud-check-run-status will fail job after pr comment is created/updated.
-        continue-on-error: true
-        with:
-          workspace: ${{ env.TF_WORKSPACE }}
-          configuration_version: ${{ steps.upload.outputs.configuration_version_id }}
-          plan_only: true
-
-      - name: Get Plan Output
-        uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.4
-        id: plan-output
-        with:
-          plan: ${{ steps.run.outputs.plan_id }}
-
-      - name: Update PR with Plan comment
-        uses: actions/github-script@v6
-        if: github.event_name == 'pull_request'
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            // 1. Retrieve existing bot comments for the PR
-            const { data: comments } = await github.rest.issues.listComments({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-            })
-            const botComment = comments.find(comment => {
-              return comment.user.type === 'Bot' && comment.body.includes('Terraform Cloud Plan Output')
-            })
-            const output = `#### Terraform Cloud Plan Output
-            \`\`\`
-            Plan: ${{ steps.plan-output.outputs.add }} to add, ${{ steps.plan-output.outputs.change }} to change, ${{ steps.plan-output.outputs.destroy }} to destroy.
-            \`\`\`
-            [Terraform Cloud Plan](${{ steps.run.outputs.run_link }})
-            `
-            // 3. If we have a comment, update it, otherwise create a new one
-            if (botComment) {
-              github.rest.issues.updateComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                comment_id: botComment.id,
-                body: output
-              })
-            } else {
-              github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: output
-              })
-            }
-
-        ## Check Run Status, if not planned_and_finished fail the job
-      - id: terraform-cloud-check-run-status
-        if: ${{ steps.run.outputs.run_status != 'planned_and_finished'}}
-        run: |
-          echo "Terraform Cloud Run Failed or Requires Further Attention"
-          echo "Run Status: '${{ steps.run.outputs.run_status }}'"
-          echo "${{ steps.run.outputs.run_link }}"
-          exit 1
