fix: workspace vars

--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -7,3 +7,5 @@ jobs:
   terraform_destroy:
     uses: soat-tech-challenge/github-workflows/.github/workflows/terraform-destroy.yml@main
     secrets: inherit
+    with:
+      workspace: ${{ vars.TF_WORKSPACE }}
